@@ -85,6 +85,7 @@ t/16_test_tester.t
 t/17_commit_node.t
 t/18_http_headers.t
 t/19_autocreate.t
+t/20_edit_form.t
 t/21_rdf.t
 t/22_feed_recent_changes.t
 t/23_feed_node_all_versions.t
