@@ -1,0 +1,38 @@
+use strict;
+use OpenGuides;
+use OpenGuides::Test;
+use Test::More;
+use Wiki::Toolkit::Setup::SQLite;
+
+eval { require DBD::SQLite; };
+if ( $@ ) {
+    my ($error) = $@ =~ /^(.*?)\n/;
+    plan skip_all => "DBD::SQLite could not be used - no database to test with ($error)";
+}
+
+eval { require Test::HTML::Content; };
+if ( $@ ) {
+    plan skip_all => "Test::HTML::Content not installed";
+}
+
+plan tests => 1;
+
+# Clear out the database from any previous runs.
+unlink "t/node.db";
+unlink <t/indexes/*>;
+Wiki::Toolkit::Setup::SQLite::setup( { dbname => "t/node.db" } );
+
+my $config = OpenGuides::Test->make_basic_config;
+my $guide = OpenGuides->new( config => $config );
+
+# Make sure the edit form doesn't display a search form.
+my $output = $guide->display_edit_form(
+                                        id => "Crabtree Tavern",
+                                        return_output => 1,
+                                      );
+                                       
+# Strip Content-Type header to stop Test::HTML::Content getting confused.
+$output =~ s/^Content-Type.*[\r\n]+//m;
+
+Test::HTML::Content::no_tag( $output, "div", { id => "search_form" },
+                             "edit form doesn't contain search form" );
