@@ -1,11 +1,13 @@
 <br clear="all" />
 
-<div id="search_form">
-  <form action="search.cgi" method="get">
-    <strong><label for="search">Search [% site_name %]:</label></strong> <input type="text" size="50" name="search" id="search" value="Search text" onclick="this.value=''" /> 
-    <input type="submit" name="Go" value="Go" id="go" class="form_button" />
-  </form>
-</div>
+[% UNLESS omit_footer_search_form %]
+  <div id="search_form">
+    <form action="search.cgi" method="get">
+      <strong><label for="search">Search [% site_name %]:</label></strong> <input type="text" size="50" name="search" id="search" value="Search text" onclick="this.value=''" /> 
+      <input type="submit" name="Go" value="Go" id="go" class="form_button" />
+    </form>
+  </div>
+[% END %]
 
 <div id="footer">
   [% BLOCK delete_link %]
